[project]
name = "theory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "bs4>=0.0.2",
    "dash>=3.0.4",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "plotly>=6.1.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "umap>=0.1.1",
    "umap-learn>=0.5.7",
]
